pkg/i2gw/emitters/kgateway/testdata/input/buffer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/client-body-buffer-size: 10m
  name: ingress-myservicea1
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: myservicea.foo.org
    http:
      paths:
      - backend:
          service:
            name: myservicea
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/client-body-buffer-size: 20m
  name: ingress-myservicea2
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: myservicea.foo.org
    http:
      paths:
      - backend:
          service:
            name: myservicea
            port:
              number: 80
        path: /2
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/client-body-buffer-size: 40m
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
  name: ingress-myserviceb
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: myserviceb.foo.org
    http:
      paths:
      - backend:
          service:
            name: myserviceb
            port:
              number: 80
        path: /
        pathType: Prefix
